fixed title image being too big

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -163,6 +163,10 @@ a.wholeDivLink {
 
 // Layout styles
 
+div.inheritwidth {
+  max-width: inherit;
+}
+
 .rg-logo {
   width: 2em;
   height: 2em;
